--- a/app/views/responders/_main_nav.html.erb
+++ b/app/views/responders/_main_nav.html.erb
@@ -1,36 +1,36 @@
 <li class="<%= is_active_action('dashboard_2') %>">
   <%= link_to root_path do %>
-      <i class="fa fa-ambulance"></i><span class="nav-label">Dashboard</span>
+    <i class="fas fa-home"></i><span class="nav-label"> Dashboard</span>
   <% end %>
 </li>
 <li class="">
   <a href="#">
-    <i class="fa fa-star"></i> <span class="nav-label">FAQ </span>
+    <i class="far fa-question-circle"></i> <span class="nav-label"> FAQ</span>
   </a>
 </li>
 <li>
   <%= link_to responder_work_histories_path(current_responder) do %>
-      <i class="fa fa-star"></i> <span class="nav-label">Work History</span>
+    <i class="fas fa-briefcase"></i> <span class="nav-label"> Work History</span>
   <% end %>
 </li>
 <li class="">
   <%= link_to responder_certifications_path(current_responder) do %>
-      <i class="fa fa-star"></i> <span class="nav-label">Certifications</span>
+    <i class="fas fa-certificate"></i> <span class="nav-label"> Certifications</span>
   <% end %>
 </li>
-<li class="">
-  <a href="#">
-    <i class="fa fa-star"></i> <span class="nav-label">Background Check </span>
-  </a>
-</li>
-<li class="">
-  <a href="#">
-    <i class="fa fa-star"></i> <span class="nav-label">Ranking </span>
-  </a>
-</li>
+<!--<li class="">-->
+<!--<a href="#">-->
+<!--<i class="fas fa-user-secret"></i> <span class="nav-label"> Background Check </span>-->
+<!--</a>-->
+<!--</li>-->
+<!--<li class="">-->
+<!--<a href="#">-->
+<!--<i class="fa fa-star"></i> <span class="nav-label"> Ranking </span>-->
+<!--</a>-->
+<!--</li>-->
 <li class="">
   <a href="#">
     <i class="fa fa-star"></i>
-    <span class="nav-label">Messages <span class="label label-info pull-right">14</span></span>
+    <span class="nav-label"> Messages <span class="label label-info pull-right">14</span></span>
   </a>
 </li>
