--- a/app/views/responders/edit.html.erb
+++ b/app/views/responders/edit.html.erb
@@ -15,26 +15,9 @@
   <div class="col-md-6">
     <div class="ibox float-e-margins">
       <div class="ibox-title">
-        <h5>Loaction Settings
+        <h5>Location Settings
           <small class="m-l-sm"></small>
         </h5>
-        <!--<div class="ibox-tools">-->
-        <!--<a class="collapse-link">-->
-        <!--<i class="fa fa-chevron-up"></i>-->
-        <!--</a>-->
-        <!--<a class="dropdown-toggle" data-toggle="dropdown" href="#">-->
-        <!--<i class="fa fa-wrench"></i>-->
-        <!--</a>-->
-        <!--<ul class="dropdown-menu dropdown-user">-->
-        <!--<li><a href="#">Config option 1</a>-->
-        <!--</li>-->
-        <!--<li><a href="#">Config option 2</a>-->
-        <!--</li>-->
-        <!--</ul>-->
-        <!--<a class="close-link">-->
-        <!--<i class="fa fa-times"></i>-->
-        <!--</a>-->
-        <!--</div>-->
         <div class="ibox-content">
           <div class="zipcode-display" id="zipcode-display">
             <%= simple_form_for current_responder, class: 'form-inline' do |f| %>
