--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="google-site-verification" content="248uddpJf5rTHpjzsMH_C_IMj1DcVjMthvM6PnFpPsI"/>
   <title>RespondersNOW.com</title>
   <%= stylesheet_link_tag params[:controller] if ::Rails.application.assets.find_asset("#{params[:controller]}.css") %>
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
