added google layouts

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -95,8 +95,8 @@
       <p><a class="navy-link" href="#" role="button">Details &raquo;</a></p>
     </div>
     <div class="col-sm-3">
-      <h2>Whos Hiring ?</h2>
-      <p>Take the stress out of finding where to apply. Waiting on call backs. Let them apply to YOU !.
+      <h2>Whios Hiring ?</h2>
+      <p>Take the stress out of finding where to apply. Waiting on call backs? Let them apply to YOU !.
         Also Take advantage of our pre-screen checks, to get placed at the top of their inboxes, daily!
       </p>
       <p><a class="navy-link" href="#" role="button">Details &raquo;</a></p>
@@ -152,7 +152,7 @@
         <i class="fa fa-envelope features-icon"></i>
         <h2> Document Upload</h2>
         <p>A safe and secure place to store all of your CEUs and Certifications.We offer that for free!
-          We can also send to your new employer once your hired! An "employment Pack" if you will!
+          We can also send to your new employer once your hired! An "employment pack" if you will!
         </p>
       </div>
       <!--<div class="m-t-lg">-->
