--- a/app/assets/stylesheets/base/landing.scss
+++ b/app/assets/stylesheets/base/landing.scss
@@ -199,10 +199,10 @@ body.landing-page {
     width: 100%;
   }
   .header-back.one {
-    background: image-url("landing/header_one.jpg") 50% 0 no-repeat;
+    background: image-url("landing/fiverr1.png") 50% 0 no-repeat;
   }
   .header-back.two {
-    background: image-url("landing/header_two.png") 50% 0 no-repeat;
+    background: image-url("landing/fiverr1.png") 50% 0 no-repeat;
   }
   /* CUSTOMIZE THE CAROUSEL
   -------------------------------------------------- */
