--- a/app/views/appviews/profile.html.erb
+++ b/app/views/appviews/profile.html.erb
@@ -227,16 +227,16 @@ Orespo<div class="row wrapper border-bottom white-bg page-heading">
 $(function() {
 
     $("span.pie").peity("pie", {
-        fill: ['#1ab394', '#d7d7d7', '#ffffff']
+        fill: ['#446CB3', '#d7d7d7', '#ffffff']
     })
 
     $(".line").peity("line", {
-        fill: '#1ab394',
+        fill: '#446CB3',
         stroke: '#169c81',
     })
 
     $(".bar").peity("bar", {
-        fill: ["#1ab394", "#d7d7d7"]
+        fill: ["#446CB3", "#d7d7d7"]
     })
 
 
