--- a/app/views/cssanimations/index.html.erb
+++ b/app/views/cssanimations/index.html.erb
@@ -185,7 +185,7 @@ $(function() {
         stroke: true,
         series: [{
             data: [{ x: 0, y: 2 }, { x: 1, y: 5 }, { x: 2, y: 8 }, { x: 3, y: 4 }, { x: 4, y: 8 }],
-            color: '#1ab394',
+            color: '#446CB3',
             stroke: '#17997f'
         }, {
             data: [{ x: 0, y: 13 }, { x: 1, y: 15 }, { x: 2, y: 17 }, { x: 3, y: 12 }, { x: 4, y: 10 }],
