--- a/app/views/dashboards/dashboard_1.html.erb
+++ b/app/views/dashboards/dashboard_1.html.erb
@@ -456,7 +456,7 @@
             }, 1300);
 
             $(".bar_dashboard").peity("bar", {
-                fill: ["#1ab394", "#d7d7d7"],
+                fill: ["#446CB3", "#d7d7d7"],
                 width: 100
             })
 
@@ -464,11 +464,11 @@
                 type: 'bar',
                 barWidth: 8,
                 height: '150px',
-                barColor: '#1ab394',
+                barColor: '#446CB3',
                 negBarColor: '#c6c6c6'
             });
 
-            var updatingChart = $(".updating-chart").peity("line", {fill: '#1ab394', stroke: '#169c81', width: 64})
+            var updatingChart = $(".updating-chart").peity("line", {fill: '#446CB3', stroke: '#169c81', width: 64})
 
             setInterval(function () {
                 var random = Math.round(Math.random() * 10)
@@ -515,7 +515,7 @@
                         borderWidth: 1,
                         color: '#d5d5d5'
                     },
-                    colors: ["#1ab394", "#1C84C6"],
+                    colors: ["#446CB3", "#1C84C6"],
                     xaxis: {},
                     yaxis: {
                         ticks: 4
