--- a/app/views/dashboards/dashboard_2.html.erb
+++ b/app/views/dashboards/dashboard_2.html.erb
@@ -406,7 +406,7 @@
                 {
                     label: "Number of orders",
                     data: data3,
-                    color: "#1ab394",
+                    color: "#446CB3",
                     bars: {
                         show: true,
                         align: "center",
@@ -517,7 +517,7 @@
                 series: {
                     regions: [{
                         values: mapData,
-                        scale: ["#1ab394", "#22d6b1"],
+                        scale: ["#446CB3", "#22d6b1"],
                         normalizeFunction: 'polynomial'
                     }]
                 },
