--- a/app/views/forms/advanced.html.erb
+++ b/app/views/forms/advanced.html.erb
@@ -50,13 +50,13 @@
                 <div class="text-center">
                     <small>Simple knob example</small><br/><br/>
                     <div class="m-r-md inline">
-                        <input type="text" value="75" class="dial m-r-sm" data-fgColor="#1AB394" data-width="85" data-height="85" />
+                        <input type="text" value="75" class="dial m-r-sm" data-fgColor="#446CB3" data-width="85" data-height="85" />
                     </div>
                     <div class="m-r-md inline">
-                        <input type="text" value="25" class="dial m-r" data-fgColor="#1AB394" data-width="85" data-height="85"/>
+                        <input type="text" value="25" class="dial m-r" data-fgColor="#446CB3" data-width="85" data-height="85"/>
                     </div>
                     <div class="m-r-md inline">
-                        <input type="text" value="50" class="dial m-r" data-fgColor="#1AB394" data-width="85" data-height="85"/>
+                        <input type="text" value="50" class="dial m-r" data-fgColor="#446CB3" data-width="85" data-height="85"/>
                     </div>
                 </div>
                 <div class="text-center">
@@ -1656,13 +1656,13 @@ $(function() {
     });
 
     var elem = document.querySelector('.js-switch');
-    var switchery = new Switchery(elem, { color: '#1AB394' });
+    var switchery = new Switchery(elem, { color: '#446CB3' });
 
     var elem_2 = document.querySelector('.js-switch_2');
     var switchery_2 = new Switchery(elem_2, { color: '#ED5565' });
 
     var elem_3 = document.querySelector('.js-switch_3');
-    var switchery_3 = new Switchery(elem_3, { color: '#1AB394' });
+    var switchery_3 = new Switchery(elem_3, { color: '#446CB3' });
 
     $('.i-checks').iCheck({
         checkboxClass: 'icheckbox_square-green',
