--- a/app/views/graphs/c3charts.html.erb
+++ b/app/views/graphs/c3charts.html.erb
@@ -122,7 +122,7 @@ $(function() {
                 ['data2', 50, 20, 10, 40, 15, 25]
             ],
             colors:{
-                data1: '#1ab394',
+                data1: '#446CB3',
                 data2: '#BABABA'
             }
         }
@@ -136,7 +136,7 @@ $(function() {
                 ['data2', 130, 100, 140, 200, 150, 50]
             ],
             colors:{
-                data1: '#1ab394',
+                data1: '#446CB3',
                 data2: '#BABABA'
             },
             type: 'spline'
@@ -157,7 +157,7 @@ $(function() {
                 ["data2", 2.5, 1.9, 2.1, 1.8, 2.2, 2.1, 1.7, 1.8, 1.8, 2.5, 2.0, 1.9, 2.1, 2.0, 2.4, 2.3, 1.8, 2.2, 2.3, 1.5, 2.3, 2.0, 2.0, 1.8, 2.1, 1.8, 1.8, 1.8, 2.1, 1.6, 1.9, 2.0, 2.2, 1.5, 1.4, 2.3, 2.4, 1.8, 1.8, 2.1, 2.4, 2.3, 1.9, 2.3, 2.5, 2.3, 1.9, 2.0, 2.3, 1.8]
             ],
             colors:{
-                data1: '#1ab394',
+                data1: '#446CB3',
                 data2: '#BABABA'
             },
             type: 'scatter'
@@ -172,7 +172,7 @@ $(function() {
                 ['data2', 50,20,10,40,15,25]
             ],
             colors:{
-                data1: '#1ab394',
+                data1: '#446CB3',
                 data2: '#BABABA'
             },
             type: 'bar',
@@ -192,7 +192,7 @@ $(function() {
             type: 'gauge'
         },
         color:{
-            pattern: ['#1ab394', '#BABABA']
+            pattern: ['#446CB3', '#BABABA']
 
         }
     });
@@ -205,7 +205,7 @@ $(function() {
                 ['data2', 120]
             ],
             colors:{
-                data1: '#1ab394',
+                data1: '#446CB3',
                 data2: '#BABABA'
             },
             type : 'pie'
