--- a/app/views/widgets/index.html.erb
+++ b/app/views/widgets/index.html.erb
@@ -687,7 +687,7 @@ $(function() {
         series: {
             regions: [{
                 values: mapData,
-                scale: ["#1ab394", "#22d6b1"],
+                scale: ["#446CB3", "#22d6b1"],
                 normalizeFunction: 'polynomial'
             }]
         },
