--- a/app/views/dashboards/dashboard_5.html.erb
+++ b/app/views/dashboards/dashboard_5.html.erb
@@ -329,7 +329,7 @@ $(function() {
             type: 'line',
             width: '100%',
             height: '50',
-            lineColor: '#1ab394',
+            lineColor: '#446CB3',
             fillColor: "transparent"
         });
 
@@ -337,7 +337,7 @@ $(function() {
             type: 'line',
             width: '100%',
             height: '50',
-            lineColor: '#1ab394',
+            lineColor: '#446CB3',
             fillColor: "transparent"
         });
 
@@ -396,7 +396,7 @@ $(function() {
                     borderWidth: 2,
                     color: 'transparent'
                 },
-                colors: ["#1ab394", "#1C84C6"],
+                colors: ["#446CB3", "#1C84C6"],
                 xaxis:{
                 },
                 yaxis: {
