--- a/app/views/metrics/index.html.erb
+++ b/app/views/metrics/index.html.erb
@@ -391,7 +391,7 @@ $(function() {
         type: 'line',
         width: '100%',
         height: '60',
-        lineColor: '#1ab394',
+        lineColor: '#446CB3',
         fillColor: "#ffffff"
     });
 
@@ -399,7 +399,7 @@ $(function() {
         type: 'line',
         width: '100%',
         height: '60',
-        lineColor: '#1ab394',
+        lineColor: '#446CB3',
         fillColor: "#ffffff"
     });
 
@@ -422,13 +422,13 @@ $(function() {
     $("#sparkline5").sparkline([1, 4], {
         type: 'pie',
         height: '140',
-        sliceColors: ['#1ab394', '#F5F5F5']
+        sliceColors: ['#446CB3', '#F5F5F5']
     });
 
     $("#sparkline6").sparkline([5, 3], {
         type: 'pie',
         height: '140',
-        sliceColors: ['#1ab394', '#F5F5F5']
+        sliceColors: ['#446CB3', '#F5F5F5']
     });
 
     $("#sparkline7").sparkline([2, 2], {
