--- a/app/views/responders/auth.html.erb
+++ b/app/views/responders/auth.html.erb
@@ -1,116 +1,278 @@
 <style>
-
-  html, body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    background-color: #000;
-  }
-
-  .bg-img {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: url("http://media.gettyimages.com/photos/ambulance-abstract-picture-id157310949") no-repeat center center fixed;
+  body {
+    background: url(<%= image_path 'ff-background.jpeg' %>) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
-    background-color: #000;
-    opacity: .2;
-    filter: alpha(opacity=50);
   }
-
-  .content {
-    font-family: 'Avenir-Next', Avenir, Helvetica, sans-serif;
-    color: #fff;
-    background-color: none;
-    margin-left: 100px;
-    z-index: 2;
-    position: absolute;
-    top: 25%;
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-  }
-
-  h2 {
-    color: black;
-    /*font-size: 160px;*/
-    margin-bottom: 0;
-    margin-top: 0;
-  }
-
-  /*h2 {*/
-  /*margin-top: 0;*/
-  /*max-width: 700px;*/
-  /*!*font-size: 30px;*!*/
-  /*width: 90%;*/
-  /*}*/
-
-  p {
-    color: black;
-    text-align: left;
-  }
-
-  /*.btn {*/
-  /*display: inline-block;*/
-  /*border: 1px solid #aaa;*/
-  /*border-radius: 40px;*/
-  /*padding: 15px 30px;*/
-  /*margin-right: 15px;*/
-  /*margin-bottom: 10px;*/
-  /*}*/
-
-  /*.btn:hover {*/
-  /*color: #e2e2e2;*/
-  /*background: rgba(255, 255, 255, 0.1);*/
-  /*}*/
-
-  /*@media only screen and (max-width: 480px) {*/
-  /*.btn {*/
-  /*background-color: white;*/
-  /*color: #444444;*/
-  /*width: 100%;*/
-  /*}*/
-
-  /*h1 {*/
-  /*font-size: 120px;*/
-  /*}*/
-
-  /*;*/
-  /*}*/
-
-  /*a {*/
-  /*text-decoration: none;*/
-  /*color: white;*/
-  /*}*/
 </style>
-<body>
-<div class='container'>
-  <div class='row content'>
-    <div class='col-lg-12'>
-      <div class="loginColumns animated fadeInDown">
-        <div class="row">
-          <div class="col-md-6">
-            <h2 class="font-bold">Welcome Responder!</h2>
-            <p>You're about to start your jorurney to excel at your career as a First Responder!</p>
-            <p>This is the start. Responders are only allowed one account. The way that we match you with new careers
-              depends
-              on the pool..</p>
-            <p>When an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-            <p>
-              <small>It has survived not only five centuries, but also the leap into electronic typesetting, remaining
-                essentially unchanged.
-              </small>
-            </p>
-            <hr>
-            <%= link_to responder_facebook_omniauth_authorize_path, class: 'btn btn-success btn-facebook' do %>
-              <i class="fa fa-facebook"> </i> Sign in with Facebook
-            <% end %>
-          </div>
+
+
+
+<!--<div class="middle-box text-center loginscreen  animated fadeInDown">-->
+<!--<div>-->
+<!--<div>-->
+<!--<h1>Responders Now</h1>-->
+<!--</div>-->
+<!--<p>-->
+<!--Click Here to login-->
+<!--</p>-->
+<!--<%= link_to responder_facebook_omniauth_authorize_path, class: 'btn btn-success btn-facebook' do %>-->
+  <!--<i class="fa fa-facebook"> </i> Sign in with Facebook-->
+  <!--
+<% end %>-->
+<!--<p class="m-t">-->
+<!--<small>Responders Now is built by First Responders for First Responders. RespondersTechnologies LLC &copy;2018-->
+<!--<br>-->
+<!--Made In America-->
+<!--</small>-->
+<!--</p>-->
+<!--</div>-->
+<!--</div>-->
+<style>
+  * {
+    margin: 0px;
+    padding: 0px;
+  }
+
+  #loginform {
+    width: 550px;
+    height: auto;
+    position: relative;
+    margin: 0 auto;
+  }
+
+  input {
+    display: block;
+    margin: 0px auto 15px;
+    border-radius: 5px;
+    background: #333333;
+    width: 85%;
+    padding: 12px 20px 12px 10px;
+    border: none;
+    color: #929999;
+    box-shadow: inset 0px 1px 5px #272727;
+    font-size: 0.8em;
+    -webkit-transition: 0.5s ease;
+    -moz-transition: 0.5s ease;
+    -o-transition: 0.5s ease;
+    -ms-transition: 0.5s ease;
+    transition: 0.5s ease;
+  }
+
+  input:focus {
+    -webkit-transition: 0.5s ease;
+    -moz-transition: 0.5s ease;
+    -o-transition: 0.5s ease;
+    -ms-transition: 0.5s ease;
+    transition: 0.5s ease;
+    box-shadow: 0px 0px 5px 1px #161718;
+  }
+
+  button {
+    background: #ff5f32;
+    border-radius: 50%;
+    border: 10px solid #222526;
+    font-size: 0.9em;
+    color: #fff;
+    font-weight: bold;
+    cursor: pointer;
+    width: 85px;
+    height: 85px;
+    position: absolute;
+    right: -42px;
+    top: 54px;
+    text-align: center;
+    -webkit-transition: 0.5s ease;
+    -moz-transition: 0.5s ease;
+    -o-transition: 0.5s ease;
+    -ms-transition: 0.5s ease;
+    transition: 0.5s ease;
+  }
+
+  button:hover {
+    background: #222526;
+    border-color: #ff5f32;
+    -webkit-transition: 0.5s ease;
+    -moz-transition: 0.5s ease;
+    -o-transition: 0.5s ease;
+    -ms-transition: 0.5s ease;
+    transition: 0.5s ease;
+  }
+
+  button i {
+    font-size: 20px;
+    -webkit-transition: 0.5s ease;
+    -moz-transition: 0.5s ease;
+    -o-transition: 0.5s ease;
+    -ms-transition: 0.5s ease;
+    transition: 0.5s ease;
+  }
+
+  button:hover i {
+    color: #ff5f32;
+    -webkit-transition: 0.5s ease;
+    -moz-transition: 0.5s ease;
+    -o-transition: 0.5s ease;
+    -ms-transition: 0.5s ease;
+    transition: 0.5s ease;
+  }
+
+  *:focus {
+    outline: none;
+  }
+
+  ::-webkit-input-placeholder {
+    color: #929999;
+  }
+
+  :-moz-placeholder { /* Firefox 18- */
+    color: #929999;
+  }
+
+  ::-moz-placeholder { /* Firefox 19+ */
+    color: #929999;
+  }
+
+  :-ms-input-placeholder {
+    color: #929999;
+  }
+
+  h1 {
+    text-align: center;
+    color: #fff;
+    font-size: 13px;
+    padding: 12px 0px;
+  }
+
+  #note {
+    color: #88887a;
+    font-size: 0.8em;
+    text-align: left;
+    padding-left: 5px;
+  }
+
+  #facebook {
+    text-align: center;
+    float: left;
+    background: #365195;
+    padding: 35px 10px 20px 10px;
+    width: 170px;
+    height: 228px;
+    border-radius: 3px;
+    cursor: pointer;
+    box-shadow: 0px 0px 10px 2px #161718;
+    margin-right: 10px;
+    -webkit-transition: 0.5s ease;
+    -moz-transition: 0.5s ease;
+    -o-transition: 0.5s ease;
+    -ms-transition: 0.5s ease;
+    transition: 0.5s ease;
+  }
+
+  #facebook:hover {
+    box-shadow: 0px 0px 0px 0px #161718;
+    -webkit-transition: 0.5s ease;
+    -moz-transition: 0.5s ease;
+    -o-transition: 0.5s ease;
+    -ms-transition: 0.5s ease;
+    transition: 0.5s ease;
+  }
+
+  .fa-facebook {
+    color: #fff;
+    font-size: 7em;
+    display: block;
+  }
+
+  .fa-facebook-f:before, .fa-facebook:before {
+    font-size: 70px;
+  }
+
+  a {
+    color: #88887a;
+    text-decoration: none;
+    -webkit-transition: 0.5s ease;
+    -moz-transition: 0.5s ease;
+    -o-transition: 0.5s ease;
+    -ms-transition: 0.5s ease;
+    transition: 0.5s ease;
+  }
+
+  a:hover {
+    color: #fff;
+    margin-left: 5px;
+    -webkit-transition: 0.5s ease;
+    -moz-transition: 0.5s ease;
+    -o-transition: 0.5s ease;
+    -ms-transition: 0.5s ease;
+    transition: 0.5s ease;
+  }
+
+  #mainlogin {
+    float: left;
+    width: 250px;
+    height: 228px;
+    padding: 10px 15px;
+    position: relative;
+    background: #555555;
+    border-radius: 3px;
+  }
+
+  #connect {
+    font-weight: bold;
+    color: #fff;
+    font-size: 13px;
+    text-align: left;
+    font-family: verdana;
+    padding-top: 10px;
+  }
+
+  #or {
+    position: absolute;
+    left: -25px;
+    top: 10px;
+    background: #222222;
+    text-shadow: 0 2px 0px #121212;
+    color: #999999;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    border-radius: 50%;
+    font-weight: bold;
+    line-height: 38px;
+    font-size: 13px;
+  }
+
+</style>
+
+
+<div class="container">
+  <div class="row">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div id="loginform">
+      <%= link_to responder_facebook_omniauth_authorize_path do %>
+        <div id="facebook"><i class="fa fa-facebook"></i>
+          <div id="connect">Login with Facebook</div>
         </div>
-      </div>
+      <% end %>
+      <!--<div id="mainlogin">-->
+        <!--<div id="or">or</div>-->
+        <!--<h1>Or try the old fashioned way!</h1>-->
+        <!--<form action="#">-->
+          <!--<input type="text" placeholder="username or email" value="" required>-->
+          <!--<input type="password" placeholder="password" value="" required>-->
+          <!--<button type="submit"><i class="fa fa-arrow-right"></i></button>-->
+        <!--</form>-->
+        <!--<div id="note"><a href="#">Forgot your password?</a></div>-->
+      <!--</div>-->
     </div>
   </div>
-  <div class='bg-img'></div>
-</body>
-</html>
