[issue5][ RJ ] added and then removed a gem

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -2,7 +2,7 @@
   <title>RespondersNOW</title>
 </head>
 <div class="navbar-wrapper">
-  <nav class="navbar navbar-default navbar-fixed-top navbar-scroll" role="navigation">
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
       <div class="navbar-header page-scroll">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -116,9 +116,10 @@
       <!--<p><a class="navy-link" href="#" role="button">Details &raquo;</a></p>-->
     </div>
     <div class="col-sm-3">
-      <h2>Class Alerts</h2>
-      <p>Sometimes a class isn't usually posted on a regular basis. Wouldn't it be
-        great if you could sign up for alerts on the classes you want to take?.
+      <h2>Missing Something?</h2>
+      <p>
+        We love hearing from you. We would like to know what you need to be better.
+        Is one of your tools not working as you want it to? We can build it for you.
       </p>
       <!--<p><a class="navy-link" href="#" role="button">Details &raquo;</a></p>-->
     </div>
