--- a/app/views/certifications/new.html.erb
+++ b/app/views/certifications/new.html.erb
@@ -18,10 +18,16 @@
 
 <div class="row">
   <div class="col-lg-12">
+    <p>
+      These submissions will get more complex as we go. We will be adding training site, default CEUs, and more. <br>
+      Thank you very much for your help. While not all submissions will be accepted, we will do our best to make
+      sure this list is an accurate representation of the training you participate in.
+
+    </p>
     <div class="ibox float-e-margins">
       <div class="ibox-title">
-        <h5>All form elements
-          <small>With custom checbox and radion elements.</small>
+        <h5>
+          <small>New</small>
         </h5>
         <div class="ibox-tools">
           <a class="collapse-link">
@@ -41,7 +47,7 @@
           </a>
         </div>
       </div>
-      <div class="ibox-content" style="min-height: 300px">
+      <div class="ibox-content" style="min-height: 200px">
         <%= simple_form_for @certification, class: "form-horizontal" do |f| %>
           <div class="form-group"><label class="col-sm-2 control-label">Course Name</label>
             <div class="col-sm-10">
