--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -93,7 +93,7 @@
 <section id="features" class="container services">
   <div class="row">
     <div class="col-sm-3">
-      <h2>Stop sotring your Certifications in that "folder"</h2>
+      <h2>Storing in that "folder" ?</h2>
       <p>Seriously. It the future. It time for you to migrate to the cloud.
         Storing your certifications in one place ensures that you have an accurate record.
         You should keep all of the classes and certificatiosn you have in a safe and secure area.
@@ -103,9 +103,9 @@
     </div>
     <div class="col-sm-3">
       <h2>Looking for a class ?</h2>
-      <p>If you're like any of us, Looking for CEUs usually involved posying on social media,
+      <p>If you're like any of us, looking for CEUs usually involves posting on social media,
         seeing what our employers are offering, or searching thorugh every PDF printout of academys in the area.
-        We were tired of that. Use our search Engine... it'll blow your socks off.
+        We were tired of that. Use our search engine... it'll blow your socks off.
       </p>
       <!--<p><a class="navy-link" href="#" role="button">Details &raquo;</a></p>-->
     </div>
@@ -114,7 +114,6 @@
       <p>Our Advanced Placement Job Board is still under contruction.
         But, we do have a section where you can see current openings.
       </p>
-      <!--<p><a class="navy-link" href="#" role="button">Details &raquo;</a></p>-->
     </div>
     <div class="col-sm-3">
       <h2>Missing Something?</h2>
@@ -128,15 +127,15 @@
 </section>
 
 <section class="container features">
-  <div class="row">
-    <div class="col-lg-12 text-center">
-      <div class="navy-line"></div>
-      <!--<h1>Over 300 companies and <span class="navy">2900 First Responders</span> use-->
-      <!--<br>FirstRespondersNow.com-->
-      <!--</h1>-->
-      <!--<p>Shouldn't you start to use it to land your next job?</p>-->
-    </div>
-  </div>
+  <!--<div class="row">-->
+  <!--<div class="col-lg-12 text-center">-->
+  <!--<div class="navy-line"></div>-->
+  <!--<h1>Over 300 companies and <span class="navy">2900 First Responders</span> use-->
+  <!--<br>FirstRespondersNow.com-->
+  <!--</h1>-->
+  <!--<p>Shouldn't you start to use it to land your next job?</p>-->
+  <!--</div>-->
+  <!--</div>-->
   <!--<div class="row">-->
   <!--<div class="col-md-3 text-center wow fadeInLeft">-->
   <!--<div>-->
